# Doc-thinker

./: .gitignore  MANIFEST.in  NEURO_AGENT_README.md  PROJECT_SUMMARY.md  README.md  README_OLD.md  README_STARTUP.md  STARTUP_GUIDE.md  START_BACKEND.md  api_multi_document.py  env.example  launch_ui.py  pyproject.toml  requirements.txt  run_ui.py  run_ui_v2.py  setup.py  token_stats.jsonl
context_dumps/: context_5aa31bfc368b4a98a7730fa166f65979.json  context_703566103f9d4d4ea342d2960a4b8fdb.json  context_83ccd9078c5744109d21a776dc2dbde7.json  context_e814d508e0b54499913cbe52002c6752.json
data/_system/: knowledge_base.db
docs/: CODE_AND_DOCS_OVERVIEW.md  FOLDERS.md  PROJECT_STRUCTURE.md  STORAGE_MIGRATION_OPERATION.md
docthinker/: __init__.py  api_config.py  base.py  batch.py  batch_parser.py  bm25_hybrid.py  config.py  core.py  entity_extractor.py  knowledge_base.py  knowledge_base_schema.sql  knowledge_base_storage.py  knowledge_graph.py  modalprocessors.py  parser.py  processor.py  prompt.py  query.py  relation_extractor.py  session_manager.py  twi_adapter.py  utils.py
docthinker/auto_thinking/: __init__.py  answer_aggregator.py  chunk_buffer.py  classifier.py  decomposer.py  image_lookup.py  orchestrator.py  page_lookup.py  prompts.py  vlm_client.py
docthinker/cognitive/: __init__.py  processor.py
docthinker/hypergraph/: __init__.py  base.py  bltcy_adapter.py  hypergraphrag.py  llm.py  operate.py  prompt.py  schemas.py  storage.py  utils.py
docthinker/providers/: __init__.py  clients.py  settings.py
graphcore/: __init__.py  pyproject.toml
neuro_agent_data/: episode_vectors.json  episodes.json
neuro_memory/: VERIFY.md
retrieval/: __init__.py
tests/: test_api_ingest.py  test_cognitive_associate_unit.py  test_ingestion_service_unit.py  test_session_flow.py
(+80 files in other folders)
